--- a/ethanol_model.ipynb
+++ b/ethanol_model.ipynb
@@ -2745,9 +2745,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "                                ...this project is open to contribuition to continue its solution!\n",
+    "                        ...this notebook is open to contribuition to continue its solution!\n",
     " \n",
-    "                                                                               PERAZZOLI, Simone"
+    "                                                                      PERAZZOLI, Simone"
    ]
   },
   {
